--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
     "electron-prebuilt": "^1.2.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "google-auth-library": "^0.9.8",
+    "googleapis": "^11.0.0",
+    "node-fetch": "^1.5.3",
+    "request": "^2.73.0"
   }
 }
