--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   },
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
-    "electron-prebuilt": "^1.2.0"
+    "electron-prebuilt": "^1.2.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb-base": "^3.0.1",
+    "eslint-plugin-import": "^1.8.1"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "google-auth-library": "^0.9.8",
     "googleapis": "^11.0.0",
     "node-fetch": "^1.5.3",
