--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.14.0",
     "google-auth-library": "^0.9.8",
     "googleapis": "^11.0.0",
+    "lodash": "^4.14.0",
     "node-fetch": "^1.5.3",
     "request": "^2.73.0"
   }
