small fixes, flag and / bug

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ client_secret.json
 token.json
 staff.txt
 emailCreds.txt
+client_secret(strousoglou).json
+emailCreds(strousoglou).txt
+token(strousoglou).json
