--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "googleapis": "^11.0.0",
     "lodash": "^4.14.0",
     "node-fetch": "^1.5.3",
+    "nodemailer": "^2.5.0",
     "request": "^2.73.0"
   }
 }
